--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     />
 
     <!-- CSS & JS -->
+    <link rel="stylesheet" href="/assets/css/reset.css" />
     <link rel="stylesheet" href="/assets/css/main.css" />
     <script defer src="/assets/js/main.js"></script>
   </head>
