Add heading and background layers overlap

--- a/index.html
+++ b/index.html
@@ -80,5 +80,15 @@
     <link rel="stylesheet" href="/assets/css/main.css" />
     <script defer src="/assets/js/main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <section class="hero">
+      <div class="hero-layer-group">
+        <h1 class="hero-layer hero-layer--heading">
+          <div>מדבירים את הבעיה,</div>
+          <div>מחזירים את השקט.</div>
+        </h1>
+        <div class="hero-layer hero-layer--background"></div>
+      </div>
+    </section>
+  </body>
 </html>
