Add brand logo to hero

--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
   </head>
   <body>
     <section class="hero">
+      <div class="hero-logo">
+        <img
+          src="/assets/logos/logo-main-align-center.svg"
+          alt="לוגו כרמל הדברות"
+          class="hero-logo__img"
+        />
+      </div>
       <div class="hero-layer-group">
         <h1 class="hero-layer hero-layer--heading">
           <div>מדבירים את הבעיה,</div>
@@ -209,7 +216,6 @@
                 </clipPath>
               </defs>
             </svg>
-
             <div>
               <h3 class="hero-feature-heading">אחריות בסיום העבודה</h3>
               <p class="hero-feature-description">
