Add hero buttons' functionality

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
       <div class="hero-btn-features-group">
         <div class="hero-btn-group">
-          <a href="" class="btn btn-primary">
+          <a href="tel:0505220276" class="btn btn-primary">
             <svg
               class="btn-icon"
               width="500"
@@ -113,7 +113,7 @@
             </svg>
             להתייעצות טלפונית ללא התחייבות
           </a>
-          <a href="" class="btn btn-secondary">
+          <a class="btn btn-secondary btn-whatsapp-chat" target="_blank">
             <svg
               class="btn-icon"
               width="500"
