Update hero layers structure

--- a/index.html
+++ b/index.html
@@ -89,13 +89,11 @@
           class="hero-logo__img"
         />
       </div>
-      <div class="hero-layer-group">
-        <h1 class="hero-layer hero-layer--heading">
-          <div>מדבירים את הבעיה,</div>
-          <div>מחזירים את השקט.</div>
-        </h1>
-        <div class="hero-layer hero-layer--background"></div>
-      </div>
+      <h1 class="hero-heading">
+        <div>מדבירים את הבעיה,</div>
+        <div>מחזירים את השקט.</div>
+      </h1>
+      <div class="hero-background"></div>
       <div class="hero-btn-features-group">
         <div class="hero-btn-group">
           <a href="tel:0505220276" class="btn btn-primary">
@@ -159,7 +157,7 @@
               <p class="hero-feature-description">עובדים ביסודיות במקומות החשובים לכם.</p>
             </div>
           </li>
-          <svg
+          <!-- <svg
             class="hero-feature-separator"
             width="120"
             height="120"
@@ -167,7 +165,7 @@
             xmlns="http://www.w3.org/2000/svg"
           >
             <circle cx="60" cy="60" r="40" />
-          </svg>
+          </svg> -->
           <li class="hero-feature">
             <svg
               class="hero-feature-icon"
@@ -186,7 +184,7 @@
               <p class="hero-feature-description">עומדים לשירותכם בכל יישובי האזור.</p>
             </div>
           </li>
-          <svg
+          <!-- <svg
             class="hero-feature-separator"
             width="120"
             height="120"
@@ -194,7 +192,7 @@
             xmlns="http://www.w3.org/2000/svg"
           >
             <circle cx="60" cy="60" r="40" />
-          </svg>
+          </svg> -->
           <li class="hero-feature">
             <svg
               class="hero-feature-icon"
