Add Google Analytics to homepage (index.html)

--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
-<html lang="he" dir="rtl">
+<html
+  lang="he"
+  dir="rtl"
+>
   <head>
     <!-- Base -->
     <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta
+      http-equiv="x-ua-compatible"
+      content="ie=edge"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
 
     <!-- UI -->
-    <meta name="theme-color" content="#779A64" />
+    <meta
+      name="theme-color"
+      content="#779A64"
+    />
 
     <!-- Content -->
-    <meta name="language" content="he" />
-    <meta name="author" content="אוֹבְּלִיק" />
+    <meta
+      name="language"
+      content="he"
+    />
+    <meta
+      name="author"
+      content="אוֹבְּלִיק"
+    />
 
     <title>כרמל הדברות | הדברה מקצועית לבתי מגורים ולמבנים ציבוריים</title>
     <meta
@@ -23,20 +38,39 @@
     />
 
     <!-- Icons -->
-    <link rel="icon" href="/favicon.ico" sizes="any" />
-    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon-180.png" />
+    <link
+      rel="icon"
+      href="/favicon.ico"
+      sizes="any"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/assets/icons/apple-touch-icon-180.png"
+    />
 
     <!-- Index -->
     <meta
       name="robots"
       content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
     />
-    <link rel="canonical" href="https://carmel-hadbarot.co.il/" />
+    <link
+      rel="canonical"
+      href="https://carmel-hadbarot.co.il/"
+    />
 
     <!-- Open Graph -->
-    <meta property="og:type" content="website" />
-    <meta property="og:locale" content="he_IL" />
-    <meta property="og:site_name" content="כרמל הדברות" />
+    <meta
+      property="og:type"
+      content="website"
+    />
+    <meta
+      property="og:locale"
+      content="he_IL"
+    />
+    <meta
+      property="og:site_name"
+      content="כרמל הדברות"
+    />
     <meta
       property="og:title"
       content="כרמל הדברות | הדברה מקצועית לבתי מגורים ולמבנים ציבוריים"
@@ -45,7 +79,10 @@
       property="og:description"
       content="כרמל הדברות – שירותי הדברה מקצועיים ואמינים, סיפוק פתרונות מותאמים לכל סוגי המזיקים ומתן יחס אישי ואחריות על פנים המבנה בסיום העבודה – כהבטחה לבית נקי מאורחים בלתי צפויים. כרמל הדברות מציעה שירותי הדברת מזיקים, לכידת מכרסמים והרחקת יונים בצפון ובמרכז הארץ, ועובדת עם חומרי הדברה המאושרים על ידי המשרד להגנת הסביבה."
     />
-    <meta property="og:url" content="https://carmel-hadbarot.co.il/" />
+    <meta
+      property="og:url"
+      content="https://carmel-hadbarot.co.il/"
+    />
 
     <meta
       property="og:image"
@@ -55,13 +92,28 @@
       property="og:image:secure_url"
       content="https://carmel-hadbarot.co.il/assets/images/og-home.jpg"
     />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="כרמל הדברות – מדביר בלבוש עבודה מלא" />
+    <meta
+      property="og:image:type"
+      content="image/jpeg"
+    />
+    <meta
+      property="og:image:width"
+      content="1200"
+    />
+    <meta
+      property="og:image:height"
+      content="630"
+    />
+    <meta
+      property="og:image:alt"
+      content="כרמל הדברות – מדביר בלבוש עבודה מלא"
+    />
 
     <!-- Twitter/X -->
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:card"
+      content="summary_large_image"
+    />
     <meta
       name="twitter:title"
       content="כרמל הדברות | הדברה מקצועית לבתי מגורים ולמבנים ציבוריים"
@@ -76,10 +128,33 @@
     />
 
     <!-- CSS & JS -->
-    <link rel="stylesheet" href="/assets/css/reset.css" />
-    <link rel="stylesheet" href="/assets/css/main.css" />
-    <script defer src="/assets/js/main.js"></script>
+    <link
+      rel="stylesheet"
+      href="/assets/css/reset.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/assets/css/main.css"
+    />
+    <script
+      defer
+      src="/assets/js/main.js"
+    ></script>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-P5DP2FQ0EE"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-P5DP2FQ0EE');
+  </script>
   <body>
     <section class="hero">
       <div class="wrapper hero-wrapper">
@@ -95,7 +170,10 @@
           <div>מחזירים את השקט.</div>
         </h1>
         <div class="hero-btn-group hero-btn-group--mobile">
-          <a href="tel:0505220276" class="btn btn-primary">
+          <a
+            href="tel:0505220276"
+            class="btn btn-primary"
+          >
             <svg
               class="btn-icon"
               width="500"
@@ -110,7 +188,10 @@
             </svg>
             <div>לקבלת אבחנה והצעת מחיר טלפונית ללא התחייבות</div>
           </a>
-          <a class="btn btn-secondary btn-whatsapp-chat" target="_blank">
+          <a
+            class="btn btn-secondary btn-whatsapp-chat"
+            target="_blank"
+          >
             <svg
               class="btn-icon"
               width="500"
@@ -129,7 +210,10 @@
         <div class="hero-background"></div>
         <div class="hero-btn-features-group">
           <div class="hero-btn-group hero-btn-group--desktop">
-            <a href="tel:0505220276" class="btn btn-primary">
+            <a
+              href="tel:0505220276"
+              class="btn btn-primary"
+            >
               <svg
                 class="btn-icon"
                 width="500"
@@ -144,7 +228,10 @@
               </svg>
               <div>להתייעצות טלפונית ללא התחייבות</div>
             </a>
-            <a class="btn btn-secondary btn-whatsapp-chat" target="_blank">
+            <a
+              class="btn btn-secondary btn-whatsapp-chat"
+              target="_blank"
+            >
               <svg
                 class="btn-icon"
                 width="500"
@@ -181,7 +268,11 @@
                 </g>
                 <defs>
                   <clipPath id="clip0_67_88">
-                    <rect width="370" height="500" fill="white" />
+                    <rect
+                      width="370"
+                      height="500"
+                      fill="white"
+                    />
                   </clipPath>
                 </defs>
               </svg>
@@ -236,7 +327,11 @@
                 </g>
                 <defs>
                   <clipPath>
-                    <rect width="500" height="216" fill="white" />
+                    <rect
+                      width="500"
+                      height="216"
+                      fill="white"
+                    />
                   </clipPath>
                 </defs>
               </svg>
@@ -265,7 +360,11 @@
                 </g>
                 <defs>
                   <clipPath>
-                    <rect width="500" height="500" fill="white" />
+                    <rect
+                      width="500"
+                      height="500"
+                      fill="white"
+                    />
                   </clipPath>
                 </defs>
               </svg>
